--- a/Index.html
+++ b/Index.html
@@ -237,12 +237,15 @@ For information about conscription into the DDD check out our communications ser
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
+	     <h1>Ammo</h1>
       <img src="MK7.png" alt="MK7" class="d-block" style="width:500px" height="500px">
     </div>
         <div class="carousel-item">
+		<h1>MK7 Pengun Models</h1>
       <img src="Pengun.png" alt="Pengun" class="d-block" style="width:500px" height="500px">
     </div>
     <div class="carousel-item">
+	     <h1>Yes/No Eraser</h1>
       <img src="YesEraser.png" alt="YesEraser" class="d-block" style="width:500px" height="500px">
     </div>
   <button  style="background-color: #353353;" class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
@@ -336,4 +339,6 @@ For information about conscription into the DDD check out our communications ser
 <script src="js/parallax.min.js"></script>
 <script src="js/jquery.magnific-popup.min.js"></script>
 <script src="js/custom.js"></script>
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3661473883846395"
+     crossorigin="anonymous"></script>
 </html>
